[metadata]
name = alphasock
version = 0.1.0
author = Neon
author_email = your@email.com
description = WhatsApp Web socket wrapper written from scratch
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/neoncodes1/alphasock
project_urls =
    Bug Tracker = https://github.com/neoncodes1/alphasock/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = alphasock
packages = find:
python_requires = >=3.7
